--- a/vignettes/using_chessR_package.Rmd
+++ b/vignettes/using_chessR_package.Rmd
@@ -135,6 +135,23 @@ glimpse(lichess_leaders)
 ```
 
 
+### Visualising games
+
+With the additional [`{chess}`](https://cran.r-project.org/package=chess) package, you can visualise a game. For example, a recent Hikaru Nakamura vs Daniel Naroditsky game on chess.com:
+```{r, eval = FALSE}
+# extract just one year-month of Hikaru's games from chess.com
+hikaru <- chessR:::get_each_player_chessdotcom("hikaru", "202112")
+# convert to {chess} 'game' format
+m <- extract_moves_as_game(hikaru[11, ])
+# plot each move and save all as a gif
+gifski::save_gif({
+  plot_moves(m, interactive = FALSE)
+}, 
+gif_file = "~/Hikaru_Naroditsky.gif", 
+delay = 1)
+```
+![](img/Hikaru_Naroditsky.gif)
+
 
 ### Analysis Functions
 
