--- a/vignettes/using_chessR_package.Rmd
+++ b/vignettes/using_chessR_package.Rmd
@@ -31,10 +31,21 @@ These websites offer a very convenient set of APIs to be able to access data and
 
 ## Installation
 
-You can install the `chessR` package from github with:
+You can install the CRAN version of [**```chessR```** ](https://CRAN.R-project.org/package=chessR) with:
 
-```{r gh-installation}
-# devtools::install_github("JaseZiv/chessR")
+```{r cran-installation, eval=FALSE}
+install.packages("chessR")
+```
+
+You can install the released version of [**```chessR```**](https://github.com/JaseZiv/chessR/) from [GitHub](https://github.com/JaseZiv/worldfootballR) with:
+
+```{r gh-installation, eval=FALSE}
+# install.packages("devtools")
+devtools::install_github("JaseZiv/chessR")
+```
+
+
+```{r load_libs, warning=FALSE, message=FALSE}
 library(chessR)
 ```
 
@@ -43,7 +54,6 @@ library(ggplot2)
 library(dplyr)
 library(stringr)
 library(lubridate)
-library(scales)
 ```
 
 
@@ -60,7 +70,7 @@ The functions detailed below relate to extracting data from the chess gaming sit
 
 The game extraction functions can take a vector of either single or multiple usernames. It will output a data frame with all the games played by that user.
 
-As of version 1.2.2, `get_raw_chessdotcom()` now accepts an additional argument called `year_month`, a six digit integer of YYYMM, which allows users to filter on which month(s) data is required for.
+As of version 1.2.2, `get_raw_chessdotcom()` now accepts an additional argument called `year_month`, a six digit integer of YYYYMM, which allows users to filter on which month(s) data is required for.
 
 The functions are below.
 
@@ -213,7 +223,7 @@ chessdotcom_game_data_all_months %>%
   ggplot(aes(x= MonthEnd, y= WinPercentage, group=1)) +
   geom_line(colour= "steelblue", size=1) +
   geom_hline(yintercept = 0.5, linetype = 2, colour = "grey40") +
-  scale_y_continuous(labels = percent, limits = c(0,1)) +
+  scale_y_continuous(limits = c(0,1)) +
   labs(x= "Month Game Ended", y= "Win %") +
   ggtitle("MONTHLY WINNING %") +
   theme_minimal()
