developed functionality for extracting clock and move times from lichess data

--- a/vignettes/using_chessR_package.Rmd
+++ b/vignettes/using_chessR_package.Rmd
@@ -187,11 +187,50 @@ Given two players, one playing on white and the other on black, we want to be ab
 ```{r get_winner}
 # function to extract the winner of each game
 chessdotcom_game_data_all_months$Winner <- get_winner(result_column = chessdotcom_game_data_all_months$Result, 
-                                     white = chessdotcom_game_data_all_months$White, 
-                                     black = chessdotcom_game_data_all_months$Black)
+                                                      white = chessdotcom_game_data_all_months$White, 
+                                                      black = chessdotcom_game_data_all_months$Black)
 
 # inspect output
 head(chessdotcom_game_data_all_months[, c("White", "Black", "Result", "Winner")])
+```
+
+#### Lichess clock and move times
+
+Extract the clock time and move times from a Lichess games list, using the `lichess_clock_move_time` function.
+
+```{r lichess_clock_move}
+# Get Lichess game data
+lichess_game_data <- get_raw_lichess("LordyLeroy")
+
+lichess_game_data_with_time <- lichess_clock_move_time(games_list = lichess_game_data)
+
+head(lichess_game_data_with_time)
+
+```
+
+For example, plot how move times tend to increase with increased move number in the opening with black, compared to white.
+
+```{r plot_lichess_clock_move}
+
+username <- "LordyLeroy"
+
+ggplot(lichess_game_data_with_time %>%
+         filter((White == username & colour == "White") |
+                  (Black == username & colour == "Black"),
+                between(move_number, 2, 9),
+                move_time <= 100),
+       aes(x = move_time,
+           fill = as.factor(move_number))) +
+  geom_density() +
+  coord_flip() +
+  labs(x = "Move time (seconds)",
+       y = "Density",
+       fill = "Move number",
+       title = "Density of move time by colour (white or black)",
+       subtitle = paste0("User: ", username)) +
+  theme_minimal() +
+  facet_wrap(~ colour)
+
 ```
 
 
