add sleep parameter to plot_moves

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,16 +14,12 @@ knitr::opts_chunk$set(
 options(tibble.print_min = 5, tibble.print_max = 5)
 ```
 
-# chessR <a href='https://jaseziv.github.io/chessR/'><img src='man/figures/logo.png' align="right" height="219.5" /></a>
+# chessR <a href='https:/jaseziv.github.io/chessR'><img src='man/figures/logo.png' align="right" height="219.5" /></a>
 
 <!-- badges: start -->
 [![Version-Number](https://img.shields.io/github/r-package/v/JaseZiv/chessR?label=chessR (Dev))](https://github.com/JaseZiv/chessR/)
 [![R build status](https://github.com/JaseZiv/chessR/workflows/R-CMD-check/badge.svg)](https://github.com/JaseZiv/chessR/actions)
-[![codecov](https://codecov.io/gh/JaseZiv/chessR/branch/master/graph/badge.svg?token=PE7LBUOWX7)](https://app.codecov.io/gh/JaseZiv/chessR)
-
-[![CRAN status](https://www.r-pkg.org/badges/version-last-release/chessR?style=for-the-badge)](https://CRAN.R-project.org/package=chessR)
-[![CRAN downloads](http://cranlogs.r-pkg.org/badges/grand-total/chessR)](https://CRAN.R-project.org/package=chessR)
-[![Downloads](https://cranlogs.r-pkg.org/badges/chessR)](https://cran.r-project.org/package=chessR)
+[![codecov](https://codecov.io/gh/JaseZiv/chessR/branch/master/graph/badge.svg?token=PE7LBUOWX7)](https://codecov.io/gh/JaseZiv/chessR)
 <!-- badges: end -->
 
 ## Overview
@@ -38,25 +34,12 @@ These websites offer a very convenient set of APIs to be able to access data and
 
 ## Installation
 
-You can install the CRAN version of [**```chessR```** ](https://CRAN.R-project.org/package=chessR) with:
+You can install the `chessR` package from github with:
 
-```{r cran-installation, eval=FALSE}
-install.packages("chessR")
-```
-
-You can install the released version of [**```chessR```**](https://github.com/JaseZiv/chessR/) from [GitHub](https://github.com/JaseZiv/worldfootballR) with:
-
-```{r gh-installation, eval=FALSE}
+```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("JaseZiv/chessR")
 ```
-
-
-```{r load_libs, warning=FALSE, message=FALSE}
-library(chessR)
-```
-
-***
 
 
 ## Usage
@@ -100,7 +83,7 @@ This is only available for chess.com extracts
 ```{r get_analysis, eval=FALSE}
 chess_analysis_single <- get_game_data("JaseZiv")
 
-chess_analysis_multiple <- get_game_data(c("JaseZiv", "Smudgy1"))
+chess_analysis_multiple <- get_game_data(c("JaseZiv", "elroch"))
 
 ```
 
@@ -140,8 +123,9 @@ hikaru <- chessR:::get_each_player_chessdotcom("hikaru", "202112")
 # convert to {chess} 'game' format
 m <- extract_moves_as_game(hikaru[11, ])
 # plot each move and save all as a gif
+# set sleep to 0 to avoid needing to plot in realtime
 gifski::save_gif({
-  plot_moves(m, interactive = FALSE)
+  plot_moves(m, interactive = FALSE, sleep = 0)
 }, 
 gif_file = "~/Hikaru_Naroditsky.gif", 
 delay = 1)
