update figure path

--- a/vignettes/using_chessR_package.Rmd
+++ b/vignettes/using_chessR_package.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Using the chessR Package"
 author: "Jason Zivkovic"
-date: "2024-10-03"
+date: "2024-10-07"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Using the chessR Package}
@@ -76,31 +76,31 @@ chessdotcom_game_data_all_months <- get_raw_chessdotcom(usernames = "JaseZiv")
 glimpse(chessdotcom_game_data_all_months)
 #> Rows: 432
 #> Columns: 25
-#> $ GameRules       <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "c…
-#> $ TimeClass       <chr> "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "b…
-#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess",…
-#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
-#> $ Date            <chr> "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12",…
-#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-"…
-#> $ White           <chr> "JaseZiv", "Commander0101", "JaseZiv", "oscarbazan", "JaseZiv", "rojarosy", "JaseZi…
-#> $ Black           <chr> "hKotla", "JaseZiv", "oscarbazan", "JaseZiv", "oscarbazan", "JaseZiv", "vinod87", "…
-#> $ Result          <chr> "0-1", "1-0", "1-0", "1-0", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "0-1",…
-#> $ CurrentPosition <chr> "rn4nr/pbB1kppp/4pq2/2pp2N1/4P2K/6P1/7P/5B1R w - -", "7Q/2kp1ppp/4pn2/1B6/pb1P4/4PN…
-#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC",…
-#> $ ECO             <chr> "C00", "A40", "B00", "D02", "B00", "B40", "B00", "A00", "C42", "A04", "B21", "B50",…
-#> $ ECOUrl          <chr> "https://www.chess.com/openings/French-Defense-Reti-Spielmann-Attack", "https://www…
-#> $ UTCDate         <chr> "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12",…
-#> $ UTCTime         <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42",…
-#> $ WhiteElo        <chr> "867", "757", "819", "792", "808", "797", "821", "773", "850", "722", "604", "704",…
-#> $ BlackElo        <chr> "1102", "702", "783", "738", "783", "859", "922", "771", "744", "875", "680", "712"…
-#> $ TimeControl     <chr> "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180",…
-#> $ Termination     <chr> "hKotla won on time", "Commander0101 won on time", "JaseZiv won by checkmate", "osc…
-#> $ StartTime       <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42",…
-#> $ EndDate         <chr> "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12",…
-#> $ EndTime         <chr> "05:48:35", "07:51:41", "07:55:21", "08:01:40", "08:07:56", "08:43:42", "08:50:23",…
-#> $ Link            <chr> "https://www.chess.com/game/live/3452526692", "https://www.chess.com/game/live/3452…
-#> $ Moves           <chr> "1. e4 {[%clk 0:02:52.8]} 1... e6 {[%clk 0:02:59.8]} 2. g3 {[%clk 0:02:49.2]} 2... …
-#> $ Username        <chr> "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZ…
+#> $ GameRules       <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess…
+#> $ TimeClass       <chr> "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz…
+#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess"…
+#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
+#> $ Date            <chr> "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12"…
+#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "…
+#> $ White           <chr> "JaseZiv", "Commander0101", "JaseZiv", "oscarbazan", "JaseZiv", "rojarosy", "JaseZiv", "JaseZiv"…
+#> $ Black           <chr> "hKotla", "JaseZiv", "oscarbazan", "JaseZiv", "oscarbazan", "JaseZiv", "vinod87", "Jesusus1998",…
+#> $ Result          <chr> "0-1", "1-0", "1-0", "1-0", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "0-1", "1-0", "0-1"…
+#> $ CurrentPosition <chr> "rn4nr/pbB1kppp/4pq2/2pp2N1/4P2K/6P1/7P/5B1R w - -", "7Q/2kp1ppp/4pn2/1B6/pb1P4/4PN1P/5PP1/2BR1K…
+#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC"…
+#> $ ECO             <chr> "C00", "A40", "B00", "D02", "B00", "B40", "B00", "A00", "C42", "A04", "B21", "B50", "B07", "C42"…
+#> $ ECOUrl          <chr> "https://www.chess.com/openings/French-Defense-Reti-Spielmann-Attack", "https://www.chess.com/op…
+#> $ UTCDate         <chr> "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12"…
+#> $ UTCTime         <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42", "09:50:28", …
+#> $ WhiteElo        <chr> "867", "757", "819", "792", "808", "797", "821", "773", "850", "722", "604", "704", "884", "1089…
+#> $ BlackElo        <chr> "1102", "702", "783", "738", "783", "859", "922", "771", "744", "875", "680", "712", "696", "120…
+#> $ TimeControl     <chr> "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "1/86…
+#> $ Termination     <chr> "hKotla won on time", "Commander0101 won on time", "JaseZiv won by checkmate", "oscarbazan won o…
+#> $ StartTime       <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42", "09:50:28", …
+#> $ EndDate         <chr> "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12", "2019-02-12"…
+#> $ EndTime         <chr> "05:48:35", "07:51:41", "07:55:21", "08:01:40", "08:07:56", "08:43:42", "08:50:23", "09:55:57", …
+#> $ Link            <chr> "https://www.chess.com/game/live/3452526692", "https://www.chess.com/game/live/3452692176", "htt…
+#> $ Moves           <chr> "1. e4 {[%clk 0:02:52.8]} 1... e6 {[%clk 0:02:59.8]} 2. g3 {[%clk 0:02:49.2]} 2... b6 {[%clk 0:0…
+#> $ Username        <chr> "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv…
 ```
 
 
@@ -110,33 +110,33 @@ chessdotcom_hikaru_recent <- get_raw_chessdotcom(usernames = "Hikaru", year_mont
 glimpse(chessdotcom_hikaru_recent)
 #> Rows: 903
 #> Columns: 27
-#> $ GameRules       <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "c…
-#> $ TimeClass       <chr> "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bu…
-#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess",…
-#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
-#> $ Date            <chr> "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01",…
-#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-"…
-#> $ White           <chr> "Lempire123", "Hikaru", "GMSrinath", "Hikaru", "Msb2", "Hikaru", "DrVelja", "Hikaru…
-#> $ Black           <chr> "Hikaru", "SchmakAttack", "Hikaru", "Sanan_Sjugirov", "Hikaru", "ToivoK3", "Hikaru"…
-#> $ Result          <chr> "0-1", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "1/2-1/2", "1/2-1/2", "1-0"…
-#> $ CurrentPosition <chr> "1r1q1r1k/4n2p/p2pn1pP/1ppB4/P3Pp2/2NP4/1PP2PP1/2KR3R w - -", "1k2rb1r/pp3Bpp/8/4n2…
-#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC",…
-#> $ ECO             <chr> "B06", "A06", "A04", "A04", "B06", "A06", "B15", "A34", "A40", "A01", "B11", "B06",…
-#> $ ECOUrl          <chr> "https://www.chess.com/openings/Modern-Defense-with-1-e4-2.Nc3-Bg7", "https://www.c…
-#> $ UTCDate         <chr> "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01",…
-#> $ UTCTime         <chr> "16:00:00", "16:02:58", "16:05:37", "16:08:38", "16:11:43", "16:14:47", "16:17:39",…
-#> $ WhiteElo        <chr> "2625", "3500", "2916", "3486", "2851", "3487", "3012", "3490", "3157", "3477", "34…
-#> $ BlackElo        <chr> "3500", "2792", "3501", "2956", "3486", "2924", "3488", "3102", "3484", "3065", "31…
-#> $ TimeControl     <chr> "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60",…
-#> $ Termination     <chr> "Hikaru won by resignation", "Hikaru won by resignation", "Hikaru won on time", "Sa…
-#> $ StartTime       <chr> "16:00:00", "16:02:58", "16:05:37", "16:08:38", "16:11:43", "16:14:47", "16:17:39",…
-#> $ EndDate         <chr> "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01",…
-#> $ EndTime         <chr> "16:01:09", "16:04:06", "16:08:15", "16:10:50", "16:13:18", "16:16:36", "16:20:13",…
-#> $ Link            <chr> "https://www.chess.com/game/live/11031846815", "https://www.chess.com/game/live/110…
-#> $ Moves           <chr> "1. e4 {[%clk 0:00:59.9]} 1... g6 {[%clk 0:00:59.9]} 2. Nc3 {[%clk 0:00:59.8]} 2...…
-#> $ SetUp           <chr> NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,…
-#> $ FEN             <chr> NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,…
-#> $ Username        <chr> "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hi…
+#> $ GameRules       <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess…
+#> $ TimeClass       <chr> "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bullet", "bulle…
+#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess"…
+#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
+#> $ Date            <chr> "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01"…
+#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "…
+#> $ White           <chr> "Lempire123", "Hikaru", "GMSrinath", "Hikaru", "Msb2", "Hikaru", "DrVelja", "Hikaru", "wonderful…
+#> $ Black           <chr> "Hikaru", "SchmakAttack", "Hikaru", "Sanan_Sjugirov", "Hikaru", "ToivoK3", "Hikaru", "Genghis_K"…
+#> $ Result          <chr> "0-1", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "1/2-1/2", "1/2-1/2", "1-0", "0-1", "1-0…
+#> $ CurrentPosition <chr> "1r1q1r1k/4n2p/p2pn1pP/1ppB4/P3Pp2/2NP4/1PP2PP1/2KR3R w - -", "1k2rb1r/pp3Bpp/8/4n2q/4pQ2/1P4B1/…
+#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC"…
+#> $ ECO             <chr> "B06", "A06", "A04", "A04", "B06", "A06", "B15", "A34", "A40", "A01", "B11", "B06", "A06", "B08"…
+#> $ ECOUrl          <chr> "https://www.chess.com/openings/Modern-Defense-with-1-e4-2.Nc3-Bg7", "https://www.chess.com/open…
+#> $ UTCDate         <chr> "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01", "2021.04.01"…
+#> $ UTCTime         <chr> "16:00:00", "16:02:58", "16:05:37", "16:08:38", "16:11:43", "16:14:47", "16:17:39", "16:20:42", …
+#> $ WhiteElo        <chr> "2625", "3500", "2916", "3486", "2851", "3487", "3012", "3490", "3157", "3477", "3479", "3210", …
+#> $ BlackElo        <chr> "3500", "2792", "3501", "2956", "3486", "2924", "3488", "3102", "3484", "3065", "3131", "3482", …
+#> $ TimeControl     <chr> "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", "60", …
+#> $ Termination     <chr> "Hikaru won by resignation", "Hikaru won by resignation", "Hikaru won on time", "Sanan_Sjugirov …
+#> $ StartTime       <chr> "16:00:00", "16:02:58", "16:05:37", "16:08:38", "16:11:43", "16:14:47", "16:17:39", "16:20:42", …
+#> $ EndDate         <chr> "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01", "2021-04-01"…
+#> $ EndTime         <chr> "16:01:09", "16:04:06", "16:08:15", "16:10:50", "16:13:18", "16:16:36", "16:20:13", "16:23:09", …
+#> $ Link            <chr> "https://www.chess.com/game/live/11031846815", "https://www.chess.com/game/live/11031905657", "h…
+#> $ Moves           <chr> "1. e4 {[%clk 0:00:59.9]} 1... g6 {[%clk 0:00:59.9]} 2. Nc3 {[%clk 0:00:59.8]} 2... Bg7 {[%clk 0…
+#> $ SetUp           <chr> NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, …
+#> $ FEN             <chr> NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, …
+#> $ Username        <chr> "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikaru", "Hikar…
 ```
 
 
@@ -168,42 +168,42 @@ chess_analysis_single <- get_game_data("JaseZiv")
 glimpse(chess_analysis_single)
 #> Rows: 431
 #> Columns: 36
-#> $ rules           <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "c…
-#> $ time_class      <chr> "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "b…
-#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess",…
-#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
-#> $ Date            <date> 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12…
-#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-"…
-#> $ White           <chr> "JaseZiv", "Commander0101", "JaseZiv", "oscarbazan", "JaseZiv", "rojarosy", "JaseZi…
-#> $ Black           <chr> "hKotla", "JaseZiv", "oscarbazan", "JaseZiv", "oscarbazan", "JaseZiv", "vinod87", "…
-#> $ Result          <chr> "0-1", "1-0", "1-0", "1-0", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "0-1",…
-#> $ CurrentPosition <chr> "rn4nr/pbB1kppp/4pq2/2pp2N1/4P2K/6P1/7P/5B1R w - -", "7Q/2kp1ppp/4pn2/1B6/pb1P4/4PN…
-#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC",…
-#> $ ECO             <chr> "C00", "A40", "B00", "D02", "B00", "B40", "B00", "A00", "C42", "A04", "B21", "B50",…
-#> $ ECOUrl          <chr> "https://www.chess.com/openings/French-Defense-Reti-Spielmann-Attack", "https://www…
-#> $ UTCDate         <chr> "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12",…
-#> $ UTCTime         <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42",…
-#> $ WhiteElo        <chr> "867", "757", "819", "792", "808", "797", "821", "773", "850", "722", "604", "704",…
-#> $ BlackElo        <chr> "1102", "702", "783", "738", "783", "859", "922", "771", "744", "875", "680", "712"…
-#> $ TimeControl     <chr> "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180",…
-#> $ Termination     <chr> "hKotla won on time", "Commander0101 won on time", "JaseZiv won by checkmate", "osc…
-#> $ StartTime       <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42",…
-#> $ EndDate         <date> 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12…
-#> $ EndTime         <chr> "05:48:35", "07:51:41", "07:55:21", "08:01:40", "08:07:56", "08:43:42", "08:50:23",…
-#> $ Link            <chr> "https://www.chess.com/game/live/3452526692", "https://www.chess.com/game/live/3452…
-#> $ Moves           <chr> "\n1. e4 {[%clk 0:02:52.8]} 1... e6 {[%clk 0:02:59.8]} 2. g3 {[%clk 0:02:49.2]} 2..…
-#> $ winner          <chr> "Black", "White", "White", "White", "White", "Black", "Black", "Black", "White", "B…
-#> $ Username        <chr> "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZ…
-#> $ n_Moves         <dbl> 21, 28, 5, 29, 25, 10, 26, 31, 35, 41, 29, 7, 35, 33, 29, 14, 2, 11, 19, 44, 13, 14…
-#> $ UserOpponent    <chr> "hKotla", "Commander0101", "oscarbazan", "oscarbazan", "oscarbazan", "rojarosy", "v…
-#> $ UserColour      <chr> "White", "Black", "White", "Black", "White", "Black", "White", "White", "Black", "W…
-#> $ OpponentColour  <chr> "Black", "White", "Black", "White", "Black", "White", "Black", "Black", "White", "B…
-#> $ UserELO         <dbl> 867, 702, 819, 738, 808, 859, 821, 773, 744, 722, 680, 712, 696, 680, 653, 625, 649…
-#> $ OpponentELO     <dbl> 1102, 757, 783, 792, 783, 797, 922, 771, 850, 875, 604, 704, 884, 868, 692, 666, 52…
-#> $ UserResult      <chr> "Loss", "Loss", "Win", "Loss", "Win", "Win", "Loss", "Loss", "Loss", "Loss", "Loss"…
-#> $ DaysTaken       <drtn> 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 …
-#> $ GameEnding      <chr> "on time", "on time", "by checkmate", "on time", "on time", "on time", "on time", "…
-#> $ Opening         <chr> "Defense-Reti-Spielmann-Attack", "Pawn-Opening-Polish-Defense", "Pawn-Opening-St-Ge…
+#> $ rules           <chr> "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess", "chess…
+#> $ time_class      <chr> "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz", "blitz…
+#> $ Event           <chr> "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess", "Live Chess"…
+#> $ Site            <chr> "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Chess.com", "Ches…
+#> $ Date            <date> 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12,…
+#> $ Round           <chr> "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "-", "…
+#> $ White           <chr> "JaseZiv", "Commander0101", "JaseZiv", "oscarbazan", "JaseZiv", "rojarosy", "JaseZiv", "JaseZiv"…
+#> $ Black           <chr> "hKotla", "JaseZiv", "oscarbazan", "JaseZiv", "oscarbazan", "JaseZiv", "vinod87", "Jesusus1998",…
+#> $ Result          <chr> "0-1", "1-0", "1-0", "1-0", "1-0", "0-1", "0-1", "0-1", "1-0", "0-1", "1-0", "0-1", "1-0", "0-1"…
+#> $ CurrentPosition <chr> "rn4nr/pbB1kppp/4pq2/2pp2N1/4P2K/6P1/7P/5B1R w - -", "7Q/2kp1ppp/4pn2/1B6/pb1P4/4PN1P/5PP1/2BR1K…
+#> $ Timezone        <chr> "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC", "UTC"…
+#> $ ECO             <chr> "C00", "A40", "B00", "D02", "B00", "B40", "B00", "A00", "C42", "A04", "B21", "B50", "B07", "C47"…
+#> $ ECOUrl          <chr> "https://www.chess.com/openings/French-Defense-Reti-Spielmann-Attack", "https://www.chess.com/op…
+#> $ UTCDate         <chr> "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12", "2019.02.12"…
+#> $ UTCTime         <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42", "09:50:28", …
+#> $ WhiteElo        <chr> "867", "757", "819", "792", "808", "797", "821", "773", "850", "722", "604", "704", "884", "680"…
+#> $ BlackElo        <chr> "1102", "702", "783", "738", "783", "859", "922", "771", "744", "875", "680", "712", "696", "868…
+#> $ TimeControl     <chr> "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180", "180"…
+#> $ Termination     <chr> "hKotla won on time", "Commander0101 won on time", "JaseZiv won by checkmate", "oscarbazan won o…
+#> $ StartTime       <chr> "05:44:13", "07:45:57", "07:54:52", "07:55:50", "08:02:06", "08:39:19", "08:44:42", "09:50:28", …
+#> $ EndDate         <date> 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12, 2019-02-12,…
+#> $ EndTime         <chr> "05:48:35", "07:51:41", "07:55:21", "08:01:40", "08:07:56", "08:43:42", "08:50:23", "09:55:57", …
+#> $ Link            <chr> "https://www.chess.com/game/live/3452526692", "https://www.chess.com/game/live/3452692176", "htt…
+#> $ Moves           <chr> "\n1. e4 {[%clk 0:02:52.8]} 1... e6 {[%clk 0:02:59.8]} 2. g3 {[%clk 0:02:49.2]} 2... b6 {[%clk 0…
+#> $ winner          <chr> "Black", "White", "White", "White", "White", "Black", "Black", "Black", "White", "Black", "White…
+#> $ Username        <chr> "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv", "JaseZiv…
+#> $ n_Moves         <dbl> 21, 28, 5, 29, 25, 10, 26, 31, 35, 41, 29, 7, 35, 33, 29, 14, 2, 11, 19, 44, 13, 14, 9, 10, 18, …
+#> $ UserOpponent    <chr> "hKotla", "Commander0101", "oscarbazan", "oscarbazan", "oscarbazan", "rojarosy", "vinod87", "Jes…
+#> $ UserColour      <chr> "White", "Black", "White", "Black", "White", "Black", "White", "White", "Black", "White", "Black…
+#> $ OpponentColour  <chr> "Black", "White", "Black", "White", "Black", "White", "Black", "Black", "White", "Black", "White…
+#> $ UserELO         <dbl> 867, 702, 819, 738, 808, 859, 821, 773, 744, 722, 680, 712, 696, 680, 653, 625, 649, 627, 649, 6…
+#> $ OpponentELO     <dbl> 1102, 757, 783, 792, 783, 797, 922, 771, 850, 875, 604, 704, 884, 868, 692, 666, 520, 691, 601, …
+#> $ UserResult      <chr> "Loss", "Loss", "Win", "Loss", "Win", "Win", "Loss", "Loss", "Loss", "Loss", "Loss", "Win", "Los…
+#> $ DaysTaken       <drtn> 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days, 0 days,…
+#> $ GameEnding      <chr> "on time", "on time", "by checkmate", "on time", "on time", "on time", "on time", "on time", "on…
+#> $ Opening         <chr> "Defense-Reti-Spielmann-Attack", "Pawn-Opening-Polish-Defense", "Pawn-Opening-St-George-Defense"…
 ```
 
 
@@ -225,22 +225,22 @@ daily_leaders <- chessdotcom_leaderboard(game_type = "daily")
 glimpse(daily_leaders)
 #> Rows: 50
 #> Columns: 16
-#> $ player_id   <int> 2305524, 32506052, 52897514, 7848044, 1946148, 1967855, 39668580, 44902306, 338211701, …
-#> $ url         <chr> "https://www.chess.com/member/Zgorl", "https://www.chess.com/member/JolinTsai", "https:…
-#> $ username    <chr> "Zgorl", "JolinTsai", "FormerProdigy", "francisbegbie", "dumplings", "cschess", "Castle…
-#> $ score       <int> 2568, 2552, 2519, 2509, 2503, 2490, 2478, 2469, 2453, 2444, 2437, 2434, 2421, 2420, 241…
-#> $ rank        <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, …
-#> $ country     <chr> "https://api.chess.com/pub/country/NL", "https://api.chess.com/pub/country/TW", "https:…
-#> $ title       <chr> "FM", "GM", "GM", "FM", NA, "FM", NA, "IM", NA, "FM", NA, "FM", NA, "CM", "IM", "IM", N…
-#> $ name        <chr> "Rob Schoorl", "蔡依林", "David Navara", "Andy Mack", NA, "Charles Schulien", "Matt", "…
-#> $ status      <chr> "premium", "premium", "premium", "premium", "premium", "premium", "premium", "premium",…
-#> $ avatar      <chr> "https://images.chesscomfiles.com/uploads/v1/user/2305524.5341b605.200x200o.67a89f6c51b…
-#> $ trend_score <df[,2]> <data.frame[36 x 2]>
-#> $ trend_rank  <df[,2]> <data.frame[36 x 2]>
-#> $ flair_code  <chr> "white_bishop", "diamond_pink", "flag_ukraine", "diamond_traditional", "diamond_trad…
-#> $ win_count   <int> 547, 446, 19, 726, 418, 107, 125, 391, 86, 443, 68, 113, 60, 369, 162, 267, 3, 24, 7…
-#> $ loss_count  <int> 207, 9, 0, 4, 2, 11, 23, 3, 5, 119, 5, 24, 14, 19, 18, 23, 0, 7, 26, 62, 6, 13, 27, 24,…
-#> $ draw_count  <int> 67, 52, 11, 6, 4, 23, 34, 13, 8, 74, 1, 26, 24, 56, 57, 54, 0, 13, 14, 7, 46, 32, 41, 4…
+#> $ player_id   <int> 32506052, 2305524, 52897514, 7848044, 1946148, 1967855, 39668580, 338211701, 44902306, 2482149, 1571…
+#> $ url         <chr> "https://www.chess.com/member/JolinTsai", "https://www.chess.com/member/Zgorl", "https://www.chess.c…
+#> $ username    <chr> "JolinTsai", "Zgorl", "FormerProdigy", "francisbegbie", "dumplings", "cschess", "Castlecard", "board…
+#> $ score       <int> 2552, 2548, 2519, 2509, 2503, 2490, 2479, 2475, 2469, 2444, 2437, 2434, 2421, 2420, 2410, 2406, 2405…
+#> $ rank        <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 2…
+#> $ country     <chr> "https://api.chess.com/pub/country/TW", "https://api.chess.com/pub/country/NL", "https://api.chess.c…
+#> $ title       <chr> "GM", "FM", "GM", "FM", NA, "FM", NA, NA, "IM", "FM", NA, "FM", NA, "CM", "IM", NA, NA, "IM", NA, NA…
+#> $ name        <chr> "蔡依林", "Rob Schoorl", "David Navara", "Andy Mack", NA, "Charles Schulien", "Matt", NA, "Björn Ahl…
+#> $ status      <chr> "premium", "premium", "premium", "premium", "premium", "premium", "premium", "basic", "premium", "pr…
+#> $ avatar      <chr> "https://images.chesscomfiles.com/uploads/v1/user/32506052.bf2575ea.200x200o.b78a496bbc70.jpeg", "ht…
+#> $ trend_score <df[,2]> <data.frame[40 x 2]>
+#> $ trend_rank  <df[,2]> <data.frame[40 x 2]>
+#> $ flair_code  <chr> "diamond_pink", "white_bishop", "flag_ukraine", "diamond_traditional", "diamond_traditional", "di…
+#> $ win_count   <int> 446, 547, 19, 726, 418, 107, 125, 87, 391, 443, 68, 113, 60, 369, 162, 72, 40, 268, 3, 24, 55, 46…
+#> $ loss_count  <int> 9, 208, 0, 4, 2, 11, 23, 5, 3, 119, 5, 24, 14, 19, 18, 26, 0, 23, 0, 7, 62, 6, 13, 9, 27, 24, 9, 26,…
+#> $ draw_count  <int> 52, 67, 11, 6, 4, 23, 35, 8, 13, 74, 1, 26, 24, 56, 57, 15, 2, 55, 0, 13, 7, 46, 32, 13, 41, 45, 3, …
 ```
 
 
@@ -350,14 +350,14 @@ lichess_game_data_with_time <- lichess_clock_move_time(games_list = lichess_game
 
 head(lichess_game_data_with_time)
 #> # A tibble: 6 × 7
-#>   Site                         White      Black      colour move_number clock_time             move_time 
-#>   <chr>                        <chr>      <chr>      <chr>        <dbl> <Duration>             <Duration>
-#> 1 https://lichess.org/96PSCywU LordyLeroy chaplayy12 White            1 1200s (~20 minutes)    0s        
-#> 2 https://lichess.org/96PSCywU LordyLeroy chaplayy12 Black            1 1200s (~20 minutes)    0s        
-#> 3 https://lichess.org/96PSCywU LordyLeroy chaplayy12 White            2 1199s (~19.98 minutes) 1s        
-#> 4 https://lichess.org/96PSCywU LordyLeroy chaplayy12 Black            2 1196s (~19.93 minutes) 4s        
-#> 5 https://lichess.org/96PSCywU LordyLeroy chaplayy12 White            3 1189s (~19.82 minutes) 10s       
-#> 6 https://lichess.org/96PSCywU LordyLeroy chaplayy12 Black            3 1194s (~19.9 minutes)  2s
+#>   Site                         White       Black      colour move_number clock_time             move_time 
+#>   <chr>                        <chr>       <chr>      <chr>        <dbl> <Duration>             <Duration>
+#> 1 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy White            1 900s (~15 minutes)     0s        
+#> 2 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy Black            1 900s (~15 minutes)     0s        
+#> 3 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy White            2 956s (~15.93 minutes)  4s        
+#> 4 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy Black            2 958s (~15.97 minutes)  2s        
+#> 5 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy White            3 1012s (~16.87 minutes) 4s        
+#> 6 https://lichess.org/Xky3KxuC Boehmoringa LordyLeroy Black            3 1017s (~16.95 minutes) 1s
 ```
 
 For example, plot how move times tend to increase with increased move number in the opening with black, compared to white.
@@ -385,7 +385,7 @@ ggplot(lichess_game_data_with_time %>%
   facet_wrap(~ colour)
 ```
 
-![plot of chunk plot_lichess_clock_move](./plot_lichess_clock_move-1.png)
+![plot of chunk plot_lichess_clock_move](plot_lichess_clock_move-1.png)
 
 
 ## Bonus: Basic EDA Analysing Games
@@ -405,7 +405,7 @@ chessdotcom_game_data_all_months %>%
   theme(panel.grid.major.y = element_blank())
 ```
 
-![plot of chunk popular_times](./popular_times-1.png)
+![plot of chunk popular_times](popular_times-1.png)
 
 
 
@@ -426,7 +426,7 @@ chessdotcom_game_data_all_months %>%
   theme_minimal()
 ```
 
-![plot of chunk user_result](./user_result-1.png)
+![plot of chunk user_result](user_result-1.png)
 
 
 
@@ -446,7 +446,7 @@ chessdotcom_game_data_all_months %>%
   theme_minimal()
 ```
 
-![plot of chunk monthly_elo](./monthly_elo-1.png)
+![plot of chunk monthly_elo](monthly_elo-1.png)
 
 
 
@@ -462,7 +462,7 @@ chessdotcom_game_data_all_months %>%
   theme_minimal()
 ```
 
-![plot of chunk opponet_elo_results](./opponet_elo_results-1.png)
+![plot of chunk opponet_elo_results](opponet_elo_results-1.png)
 
 
 
